# Y86-64-Simulator

./: .clang-format  .gitignore  CMakeLists.txt  README.md  clean.ps1  clean.sh  config.h.in  package-lock.json
.github/: dependabot.yml
app/: README.md  browserconfig.xml  package-lock.json  package.json  server.js  site.webmanifest  webpack.config.js
app/src/: index.html  index.js  output.js  registers.js  style.css  upload.js
lib/: .clang-format  CMakeLists.txt  README.md  clean.ps1  config.h.in  install.ps1  install.sh
lib/scripts/: clean.sh  install.ps1  install.sh
lib/src/: CMakeLists.txt  config.h  main.cpp
lib/src/assets/: CMakeLists.txt  alu.cpp  alu.h  cpu_clock.cpp  cpu_clock.h  file.cpp  file.h  memory.cpp  memory.h  register.cpp  register.h
lib/src/init/: CMakeLists.txt  argument.cpp  argument.h
lib/src/stages/: CMakeLists.txt  bubble.cpp  bubble.h  decode.cpp  execute.cpp  execute.h  fetch.cpp  fetch.h  instruction.h  memory.cpp  write_back.cpp  write_back.h
lib/src/utils/: utility.cpp  utility.h
src/: CMakeLists.txt  config.h  main.cpp
src/assets/: alu.cpp  alu.h  file.cpp  file.h  memory.cpp  memory.h  register.cpp  register.h
src/init/: argument.cpp  argument.h
src/stages/: CMakeLists.txt  bubble.cpp  decode.cpp  decode.h  execute.cpp  execute.h  fetch.cpp  fetch.h  instruction.h  memory.cpp  memory.h  stage.cpp  stage.h  write_back.cpp  write_back.h  writeback.cpp  writeback.h
src/utils/: CMakeLists.txt  utility.cpp  utility.h
